# sd_pyro

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run_node.py  shell.nix
raft/: __init__.py  client.py  config.py  node.py  types.py
tests/: test_client.py  test_election.py  test_heartbeat.py  test_main.py  test_node.py  test_replication.py  test_run_node.py  test_types.py
