[project]
name = "sd-pyro"
version = "0.1.0"
description = "Raft implementation using Pyro5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyro5>=5.16",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["Pyro5.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
